crates/typecheck/tests/fixtures/errors/unknown_field.ax
struct Point { x: Float, y: Float }
fn main() { val p = Point { x: 1.0 } val z = p.z }